# brain_id

./: CLAUDE.md  Makefile  README.md  auth.py  feature_extractor.py  features.py  pyproject.toml  requirements.txt  riemann_potato.py
data/interim/: 1230_chris_5hz.csv  1230_ziyang_10hz.csv  1230_ziyang_15hz.csv  1230_ziyang_5hz.csv  1400_chris_10hz.csv  1400_chris_15hz.csv  1400_chris_5hz.csv  1400_ziyang_10hz.csv  1400_ziyang_15hz.csv  1400_ziyang_5hz.csv  1600_josua_10hz.csv  2000_ziyang_10hz.csv  200_mehak_10hz.csv
data/interim/10hz/: 1600_chris_10hz.csv  2000_chris_10hz.csv  2000_josua_10hz.csv
data/raw/: 1230_chris_5hz.csv  1230_ziyang_10hz.csv  1230_ziyang_15hz.csv  1230_ziyang_5hz.csv  1400_chris_10hz.csv  1400_chris_15hz.csv  1400_chris_5hz.csv  1400_ziyang_10hz.csv  1400_ziyang_15hz.csv  1400_ziyang_5hz.csv  1600_chris_10hz.csv  1600_josua_10hz.csv  2000_chris_10hz.csv  2000_josua_10hz.csv  2000_ziyang_10hz.csv  200_mehak_10hz.csv  sample.csv
models/: potato_pipelines_1230_1600.pkl
notebooks/: classification.ipynb  signal_analysis.ipynb  visualize_comparison.py
train/: train_potato.py
