[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "brain_id"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Christian Bitter" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12.0"

[project.scripts]
ssvep-gui = "brain_id.ssvep_gui:main"


[tool.ruff]
line-length = 99
src = ["brain_id"]
include = ["pyproject.toml", "brain_id/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["brain_id"]
force-sort-within-sections = true

